--- a/index.html
+++ b/index.html
@@ -12,8 +12,13 @@
 
 <body>
     <div class="points"></div>
+    <p id="highscore">0</p>
     <div class="board"></div>
     <button class="start"><span>Start</span></button>
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="https://www.gstatic.com/firebasejs/6.4.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/6.4.0/firebase-firestore.js"></script>
+    <script src="js/firebase.js"></script>
 </body>
 
 </html>
